# olio-ohjelmointi

./: README.md
kotiteht1teht1/: main.cpp
kotiteht1teht2/: main.cpp
kotiteht1teht3/: main.cpp
kotiteht2teht1/: game.cpp  game.h
kotiteht3teht1/: chef.cpp  chef.h  italianchef.cpp  italianchef.h  main.cpp
kotiteht4/: asunto.cpp  katutaso.cpp  katutaso.h  kerros.cpp  kerros.h  kerrostalo.cpp  kerrostalo.h  main.cpp
kotiteht5/: asunto.cpp  asunto.h  katutaso.cpp  katutaso.h  kerros.cpp  kerros.h  kerrostalo.cpp  kerrostalo.h  main.cpp
kotiteht6teht1/: mainwindow.cpp  mainwindow.h  mainwindow.ui
kotiteht6teht2/: mainwindow.cpp  mainwindow.h  mainwindow.ui
kotiteht7/: mainwindow.cpp  mainwindow.h  mainwindow.ui
lisateht5/: devicebaseclass.cpp  devicebaseclass.h  devicedisplay.cpp  devicemouse.cpp  devicetouchpad.cpp  main.cpp  mydeviceui.cpp  mydeviceui.h
teht0/: CMakeLists.txt
